--- a/css/style.scss
+++ b/css/style.scss
@@ -278,6 +278,7 @@ body{
 
 .footer{
     background-color: rgb(229,229,229);
+    width: 100%;
     &__word{
         color: $primary-purple;
         text-decoration: none;
@@ -299,3 +300,450 @@ body{
     }
 }
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.cardC {
+    overflow: hidden;
+    margin: auto;
+    width: 650px;
+    border-color: #cccc;
+    border-radius: 10px;
+    background-color: white;
+  }
+  
+  .pph {
+    width: 40px;
+    height: 40px;
+    border-radius: 20px;
+    border-color: rgba(214, 214, 214, 0.541);
+    border: 1px solid;
+  }
+  
+  .title__nameC {
+    font-weight: 490;
+    font-size: medium;
+    margin-bottom: -5px;
+  }
+  
+  .title__timeC {
+    font-size: small;
+    margin-top: none;
+    color: rgb(113, 113, 113);
+  }
+  
+  .aC {
+    text-decoration: none;
+  }
+  
+  .title_articleC {
+    font-weight: bold;
+    font-size: x-large;
+    color: black;
+    margin-top: -10px;
+    margin-bottom: 10px;
+  }
+  
+  .title_articleC:hover {
+    color: rgb(87, 87, 255);
+  }
+  
+  .buttonC {
+    height: 25px;
+    font-size: small;
+    border-radius: 5px;
+    border: 0 solid;
+    margin-right: 5px;
+  }
+  
+  .time__readC{
+    margin-top: 10px;
+    margin-right: 10px;
+    font-size: small;
+    color: rgba(56, 56, 56, 0.8);
+  }
+  
+  .img__iconsC{
+    width: auto;
+    height: auto;
+  }
+  
+  .btn__discussC {
+    width: 70px;
+    height: 25px;
+    border: 0 solid;
+    background-color: rgb(91%, 98%, 93%);
+  }
+  
+  .btn__discussC:hover {
+    border: 1px solid rgb(192, 255, 210);
+  }
+  
+  .btn__javascriptC {
+    width: 85px;
+    height: 25px;
+    border: 0 solid;
+    background-color: white;
+  }
+  
+  .btn__javascriptC:hover {
+    background-color: rgb(252, 250, 220);
+    border: 1px solid rgb(248, 244, 187);
+  }
+  
+  .btn__cssC {
+    width: 50px;
+    height: 25px;
+    border: 0 solid;
+    background-color: white;
+  }
+  
+  .btn__cssC:hover {
+    background-color: rgb(239, 241, 252);
+    border: 1px solid rgb(212, 218, 250);
+  }
+  
+  .btn__htmlC {
+    width: 60px;
+    height: 25px;
+    border: 0 solid;
+    background-color: white;
+  }
+  
+  .btn__htmlC:hover {
+    background-color: rgb(250, 232, 232);
+    border: 1px solid rgb(255, 192, 192);
+  }
+  
+  .btn__webdevC {
+    width: 70px;
+    height: 25px;
+    border: 0 solid;
+    background-color: white;
+  }
+  
+  .btn__webdevC:hover {
+    background-color: rgb(244, 232, 250);
+    border: 1px solid rgb(227, 192, 255);
+  }
+  
+  .btn__actionsC {
+    margin-top: 5px;
+    margin-right: 5px;
+    width: 115px;
+    height: 30px;
+    border: 0 solid;
+    background-color: white;
+  }
+  
+  .btn__actionsC:hover {
+    background-color: rgb(243, 243, 243);
+  }
+  
+  .btn__saveC {
+    margin-top: 5px;
+    margin-right: 5px;
+    width: 52px;
+    height: 32px;
+    border: 0 solid;
+    background-color: rgb(185, 185, 185);
+  }
+  
+  .btn__saveC:hover {
+    background-color: rgb(153, 153, 153);
+  }
+
+  .centro{
+    margin-top: 5rem;
+    
+  }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@mixin link-style {
+    color: rgb(72, 72, 72);
+    text-decoration: none;
+}
+
+@mixin icon-properties {
+    height: 3rem;
+    width: 3rem;
+    margin-left: 1.7rem;
+    margin-top: 2rem;
+    border-radius: 50%;
+    transform: all .1s ease;
+}
+
+@mixin top-image {
+    border-radius: .5rem .5rem 0 0;
+    width: 100%;
+    background-color: rgb(212, 212, 212);
+}
+
+@mixin btn-base {
+    color: $primary-purple;
+    border: 1px solid $primary-purple;
+    width: 100;
+}
+@mixin user-img-details {
+    width: 2.6rem;
+    height: 2.6rem;
+    border-radius: 100%;
+}
+
+.container {
+    &__btn {
+        color: $primary-purple;
+        border: 1px solid $primary-purple;
+        width: 100;
+    }
+    &__btn:hover {
+        background-color: $primary-purple;
+        color: white;
+        text-decoration: underline;
+    }
+    &__log {
+        margin-top: 1rem;
+        margin-bottom: 2rem;
+        @include link-style();
+    }
+}
+.fila {
+    background-color: rgb(250, 250, 250);
+}
+.fila:hover {
+    background-color: rgb(255, 255, 255);
+}
+.word {
+    color: $primary-purple;
+    cursor: pointer;
+}
+.up:hover {
+    color: $primary-purple;
+}
+.down {
+    font-size: .7rem;
+}
+.icons {
+    height: 100%;
+    position: fixed;
+    z-index: 1;
+    &__heart {
+        @include icon-properties();
+        margin-top: 7rem;
+    }
+    &__heart:hover {
+        background-color: rgba(232, 85, 85, 0.205);
+    }
+    &__dragon {
+        @include icon-properties();
+    }
+    &__dragon:hover {
+        background-color: rgba(106, 230, 106, 0.267);
+    }
+    &__save {
+        @include icon-properties();
+    }
+    &__save:hover {
+        background-color: rgba(124, 75, 203, 0.185);
+    }
+    &__ellipsis {
+        @include icon-properties();
+    }
+    &__ellipsis:hover {
+        background-color: rgba(101, 97, 97, 0.071);
+    }
+}
+body {
+    background-color: rgb(245, 245, 245);
+
+}
+.top-img {
+    margin-top: 3rem;
+    @include top-image();
+}
+.top-img-desk {
+    margin-top: 5rem;
+    @include top-image();
+}
+.wrapper {
+    padding: .6rem;
+    background-color: white;
+}
+.post-details {
+    margin-top: .8rem;
+    &__user-img {
+        width: 2.6rem;
+        height: 2.6rem;
+        border-radius: 100%;
+    }
+    &__user-name {
+        font-size: 1rem;
+        font-weight: bolder;
+        margin-left: .5rem;
+        @include link-style();
+    }
+    &__post-info {
+        font-size: .8rem;
+        margin-left: .5rem;
+    }
+}
+.tittle-box {
+    &__tittle {
+        font-weight: bolder;
+        font-size: 2rem;
+        /*tipo de letra*/
+    }
+    &__tags {
+        margin-bottom: 1rem;
+        display: flex;
+        gap: 1rem;
+        &__related1 {
+            padding: .2rem;
+            border-radius: .3rem;
+
+            @include link-style();
+        }
+        &__related1:hover {
+            background-color: rgba(106, 230, 106, 0.176);
+            color: rgb(72, 72, 72);
+        }
+        &__related2 {
+            padding: .2rem;
+            border-radius: .3rem;
+            @include link-style();
+        }
+        &__related2:hover {
+            background-color: rgba(232, 85, 85, 0.148);
+            color: rgb(72, 72, 72);
+        }
+        &__related3 {
+            padding: .2rem;
+            border-radius: .3rem;
+            @include link-style();
+        }
+        &__related3:hover {
+            background-color: rgba(75, 83, 203, 0.135);
+            color: rgb(72, 72, 72);
+        }
+    }
+}
+.comment {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 1rem;
+    &__discussion {
+        font-weight: bold;
+    }
+    &__subscribe-btn {
+        width: 6rem;
+        border-radius: .3rem;
+        border-style: solid;
+        background-color: white;
+    }
+    &__subscribe-btn:hover {
+        background-color: rgb(239, 239, 239);
+    }
+}
+.read-next-tittle {
+    font-weight: bold;
+    font-size: 1.5rem;
+    margin-bottom: 2rem;
+}
+.read-next {
+    &__user-img {
+        width: 3.5rem;
+        height: 3.5rem;
+        border-radius: 100%;
+    }
+
+    &__user-name {
+        font-size: 1rem;
+        font-weight: bolder;
+        margin-left: .5rem;
+        @include link-style();
+    }
+
+    &__post-info {
+        font-size: .8rem;
+        margin-left: .5rem;
+    }
+}
+.carda {
+    margin-top: 2rem;
+    width: 20rem;
+    margin-left: 1rem;
+    border-style: dashed black;
+    position: fixed;
+}
+.more-of {
+    margin-top: 30rem;
+    width: 20rem;
+    margin-left: 1rem;
+    border-style: dashed black;
+    position: fixed;
+    font-size: 1rem;
+}
+.carda {
+    margin-top: 5rem;
+    width: 20rem;
+    margin-left: 1rem;
+    border-style: dashed black;
+    position: fixed;
+}
+.btnN {
+    @include btn-base();
+    color: white;
+    border-radius: .3rem;
+    background-color: $primary-purple;
+}
+.btnN:hover {
+    background-color: rgb(42, 59, 99);
+}
+.btnM {
+    @include btn-base();
+    width: 20rem;
+    margin: auto;
+    padding: .3rem;
+    border-radius: .5rem;
+    background-color: $primary-purple;
+    color: white;
+}
+.btnM:hover {
+    background-color: rgb(42, 59, 99)
+}
+.card-user {
+    padding: .5rem;
+
+    &__img {
+        @include user-img-details();
+        margin-top: .3rem;
+        margin-left: 1rem;
+    }
+}
