--- a/css/style.scss
+++ b/css/style.scss
@@ -316,9 +316,8 @@ body{
 
 
 .cardC {
-    overflow: hidden;
-    margin: auto;
-    width: 650px;
+    
+    //width: 650px;
     border-color: #cccc;
     border-radius: 10px;
     background-color: white;
@@ -340,7 +339,6 @@ body{
   
   .title__timeC {
     font-size: small;
-    margin-top: none;
     color: rgb(113, 113, 113);
   }
   
@@ -369,9 +367,8 @@ body{
   }
   
   .time__readC{
-    margin-top: 10px;
-    margin-right: 10px;
-    font-size: small;
+    
+    font-size: 12px;
     color: rgba(56, 56, 56, 0.8);
   }
   
@@ -381,14 +378,16 @@ body{
   }
   
   .btn__discussC {
-    width: 70px;
+    width: auto;
+    font-size :12px;
+    margin: 3px;
     height: 25px;
-    border: 0 solid;
+    border: none;
     background-color: rgb(91%, 98%, 93%);
   }
   
   .btn__discussC:hover {
-    border: 1px solid rgb(192, 255, 210);
+    border: 1.5px solid rgb(192, 255, 210);
   }
   
   .btn__javascriptC {
@@ -440,10 +439,9 @@ body{
   }
   
   .btn__actionsC {
-    margin-top: 5px;
-    margin-right: 5px;
-    width: 115px;
+    width: auto;
     height: 30px;
+    font-size: 14px;
     border: 0 solid;
     background-color: white;
   }
@@ -453,12 +451,10 @@ body{
   }
   
   .btn__saveC {
-    margin-top: 5px;
-    margin-right: 5px;
-    width: 52px;
-    height: 32px;
+    height: 2rem ;
+    font-size: 14px;
     border: 0 solid;
-    background-color: rgb(185, 185, 185);
+    background-color: #D6D6D7;
   }
   
   .btn__saveC:hover {
@@ -467,7 +463,7 @@ body{
 
   .centro{
     margin-top: 5rem;
-    
+  
   }
 
 
